<resources>
    <string name="app_name">BlckchnMsg</string>
    <!-- Strings related to login -->
    <string name="prompt_addr">User Address</string>
    <string name="prompt_uname">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Romulus10</string>
    <string name="nav_header_subtitle">romulus108@protonmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="keys">Keys</string>
    <string name="new_message">New Message</string>
    <string name="new_contact">New Contact</string>
    <string name="contact_address">Contact Address</string>
    <string name="contact_username">Contact Username</string>
    <string name="contact_email_address">Contact Email Address</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="send_message">Send Message</string>
</resources>
