<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_contacts"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_keys"
            android:title="@string/keys" />
    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_message"
            android:title="@string/new_message" />

        <item
            android:id="@+id/nav_new_contact"
            android:title="@string/new_contact" />
    </group>

</menu>
